Formulas overflow glitch fix

--- a/frontend/admin/admin.css
+++ b/frontend/admin/admin.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
+@import 'https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap';
 
 *
 {
@@ -8,18 +8,19 @@
 body
 {
     background: linear-gradient(-45deg, #5552ee, #e73c7e, #23a6d5, #23d5ab);
-	background-size: 300% 300%;
+    background-size: 300% 300%;
     animation: gradientbg 20s linear infinite;
     color: white;
+    overflow-x: hidden;
 }
 
-/* ------------------------ PRE-GAME ------------------------ */ 
+/* ------------------------ PRE-GAME ------------------------ */
 
 @keyframes gradientbg
 {
-	0% {background-position: 0% 50%;}
-	50% {background-position: 100% 50%;}
-	100% {background-position: 0% 50%;}
+    0% {background-position: 0% 50%;}
+    50% {background-position: 100% 50%;}
+    100% {background-position: 0% 50%;}
 }
 
 .floatingformulas {
@@ -37,6 +38,7 @@ body
     font-size: 1.5rem;
     opacity: .4;
     cursor: pointer;
+    width: max-content;
 }
 
 a.formula:link, a.formula:visited, a.formula:active
@@ -199,7 +201,7 @@ th
 }
 
 
-/* ------------------------ GAME ------------------------ */ 
+/* ------------------------ GAME ------------------------ */
 
 @keyframes showgamepanel
 {
